# ax360e

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: android.yml
app/: build.gradle  build.gradle.bak
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/assets/config/: default_config.toml
app/src/main/cpp/: CMakeLists.txt  aarch64_disasm.cpp  aarch64_disasm.h  ax360e.cpp  ax360e_emu.cpp  ax360e_emu.h  cpuinfo.cpp  cpuinfo.h  document_file.cpp  document_file.h  emulator.cpp  emulator.h  emulator_ax360e.cpp  emulator_ax360e.h  hardware_ProcessorInfo.cpp  libavutil.v  vkapi.cpp  vkapi.h  vksym.h  vkutil.cpp  vkutil.h  xe_a64_code_cache_posix.cpp  xe_aaudio_audio_driver.cpp  xe_aaudio_audio_driver.h  xe_aaudio_audio_system.cpp  xe_aaudio_audio_system.h  xe_android_hid.cpp  xe_android_hid.h  xe_android_input_driver.cpp  xe_android_input_driver.h  xe_android_util.cpp  xe_android_util.h  xe_opensles_audio_driver.cpp  xe_opensles_audio_driver.h  xe_opensles_audio_system.cpp  xe_opensles_audio_system.h  xe_saf_disc_archive_device.cpp  xe_saf_disc_archive_device.h  xe_saf_disc_archive_entry.cpp  xe_saf_disc_archive_entry.h  (+21 more)
app/src/main/cpp/xenia/: .gitignore  premake5.lua
app/src/main/cpp/xenia/ab/: CMakeLists.txt
app/src/main/cpp/xenia/src/xenia/: emulator.cc  emulator.h  guest_pointers.h  memory.cc  memory.h
app/src/main/cpp/xenia/src/xenia/app/: emulator_window.cc  premake5.lua
app/src/main/cpp/xenia/src/xenia/apu/: audio_media_player.cc  audio_system.cc  conversion.h  xma_decoder.cc
app/src/main/cpp/xenia/src/xenia/apu/nop/: nop_audio_system.cc
app/src/main/cpp/xenia/src/xenia/base/: bit_stream.cc  bit_stream.h  clock.cc  clock.h  clock_posix.cc  clock_win.cc  cvar.cc  exception_handler_posix.cc  filesystem.cc  filesystem.h  filesystem_posix.cc  filesystem_win.cc  logging.h  main_android.cc  mapped_memory.h  mapped_memory_posix.cc  math.h  memory.cc  memory.h  memory_posix.cc  mutex.h  platform.h  platform_win.h  ring_buffer.cc  ring_buffer.h  string.cc  string.h  string_key.h  string_util.h  system_android.cc  threading.h  threading_posix.cc  threading_win.cc
app/src/main/cpp/xenia/src/xenia/cpu/: export_resolver.h  mmio_handler.cc  module.h  processor.cc  processor.h  thread_state.cc  xex_module.cc  xex_module.h
app/src/main/cpp/xenia/src/xenia/cpu/backend/a64/: a64_assembler.cc  a64_backend.cc  a64_backend.h  a64_code_cache.cc  a64_code_cache.h  a64_code_cache_win.cc  a64_emitter.cc  a64_emitter.h  a64_function.cc  a64_op.h  a64_seq_memory.cc  a64_seq_vector.cc  a64_sequences.cc  a64_tracers.cc  a64_tracers.h  premake5.lua
app/src/main/cpp/xenia/src/xenia/cpu/backend/x64/: premake5.lua  x64_backend.cc  x64_tracers.cc
app/src/main/cpp/xenia/src/xenia/cpu/hir/: hir_builder.h  opcodes.h
app/src/main/cpp/xenia/src/xenia/cpu/ppc/: ppc_context.h  ppc_translator.cc
app/src/main/cpp/xenia/src/xenia/debug/ui/: debug_window.cc
app/src/main/cpp/xenia/src/xenia/gpu/: command_processor.cc  gpu_flags.cc  graphics_system.cc  pm4_command_processor_implement.h  shared_memory.cc  trace_writer.cc
app/src/main/cpp/xenia/src/xenia/gpu/d3d12/: d3d12_command_processor.cc
app/src/main/cpp/xenia/src/xenia/hid/: input_system.h
app/src/main/cpp/xenia/src/xenia/hid/skylander/: premake5.lua
app/src/main/cpp/xenia/src/xenia/kernel/: kernel_module.cc  kernel_state.cc  user_module.cc  xfile.cc  xthread.cc  xthread.h
app/src/main/cpp/xenia/src/xenia/kernel/util/: native_list.h  shim_utils.h  xlast.cc
app/src/main/cpp/xenia/src/xenia/kernel/xam/: content_manager.cc  content_manager.h  profile_manager.cc  user_profile.cc  user_tracker.cc  user_tracker.h  xam_module.cc
app/src/main/cpp/xenia/src/xenia/kernel/xam/ui/: create_profile_ui.cc  game_achievements_ui.cc  title_info_ui.cc
app/src/main/cpp/xenia/src/xenia/kernel/xboxkrnl/: xboxkrnl_module.cc  xboxkrnl_modules.cc  xboxkrnl_ob.cc  xboxkrnl_rtl.cc
app/src/main/cpp/xenia/src/xenia/patcher/: patch_db.cc  patch_db.h  plugin_loader.cc  plugin_loader.h
app/src/main/cpp/xenia/src/xenia/ui/: imgui_drawer.cc  imgui_drawer.h  imgui_guest_notification.cc  imgui_host_notification.cc  renderdoc_api.cc  window_win.cc  windowed_app_context.h
app/src/main/cpp/xenia/src/xenia/ui/vulkan/: spirv_tools_context.cc  vulkan_api.h  vulkan_instance.cc  vulkan_instance.h  vulkan_presenter.cc
app/src/main/cpp/xenia/src/xenia/vfs/: device.h  virtual_file_system.cc
app/src/main/cpp/xenia/src/xenia/vfs/devices/: xcontent_container_device.h  xcontent_container_file.h
app/src/main/res/layout/: activity_about.xml  activity_emulator.xml  activity_emulator_settings.xml  activity_keymap.xml  activity_main.xml  edit_seek_bar.xml  game_item.xml  pad_edit_menu.xml
app/src/main/res/menu/: game_options.xml  main.xml
app/src/main/res/values/: arrays.xml  (+3 more)
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+45 files in other folders)
